Add procedure to set registry variables
Add to docs to create a token at access.redhat.com/terms-based-registry/accounts is
necessary for entering a registry_username and registry_password

https://issues.redhat.com/browse/AAP-29120

--- a/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
@@ -37,6 +37,8 @@ There are several supported installation scenarios for {PlatformName}. To instal
 include::platform/proc-editing-inventory-file.adoc[leveloffset=+1]
 include::platform/con-install-scenario-examples.adoc[leveloffset=+1]
 include::platform/con-install-scenario-recommendations.adoc[leveloffset=+2]
+//Added for AAP-29120
+include::platform/proc-set-registry-username-password.adoc[leveloffset=+2]
 //[emcwhinn] Removing for AAP-29246 as content is being moved to one guide in 2.4 customer portal 
 //include::platform/con-eda-2-5-with-controller-2-4.adoc[leveloffset=+3]
 //[ifowler] Removed for AAP-18700 Install Guide Scenario Consolidation  
