--- a/downstream/modules/platform/ref-general-inventory-variables.adoc
+++ b/downstream/modules/platform/ref-general-inventory-variables.adoc
@@ -23,6 +23,8 @@ Used for both `[automationcontroller]` and `[automationhub]` groups.
 Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
 
 When `registry_url` is `registry.redhat.io`, username and password are required if not using a bundle installer.
+
+For more information, see xref:proc-set-registry-username-password[Setting registry_username and registry_password].
 | *`registry_url`* | Used for both `[automationcontroller]` and `[automationhub]` groups.
 
 Default = `registry.redhat.io`.
@@ -33,6 +35,8 @@ User credential for access to `registry_url`.
 Used for both `[automationcontroller]` and `[automationhub]` groups, but only if the value of `registry_url` is `registry.redhat.io`.
 
 Enter your Red Hat Registry Service Account credentials in `registry_username` and `registry_password` to link to the Red Hat container registry.
+
+For more information, see xref:proc-set-registry-username-password[Setting registry_username and registry_password].
 | *`routable_hostname`* | `routable hostname` is used if the machine running the installer can only route to the target host through a specific URL, for example, if you use shortnames in your inventory, but the node running the installer can only resolve that host using FQDN.
 
 If `routable_hostname` is not set, it should default to `ansible_host`. If you do not set `ansible_host`, `inventory_hostname` is used as a last resort.
