--- a/downstream/modules/platform/proc-set-registry-username-password.adoc
+++ b/downstream/modules/platform/proc-set-registry-username-password.adoc
@@ -2,7 +2,7 @@
 
 = Setting registry_username and registry_password
 
-If you intend to use the `registry_username` and `registry_password`` variables in an inventory file you are recommended to use the following method to create a Registry Service Account to set a token with an expiration in the plaintext `inventory/vars.yml` file instead of using a plaintext username and password, for reasons of security.
+If you intend to use the `registry_username` and `registry_password` variables in an inventory file you are recommended to use the following method to create a Registry Service Account to set a token with an expiration in the plaintext `inventory/vars.yml` file instead of using a plaintext username and password, for reasons of security.
 
 Registry service accounts provide named tokens that can be used in environments where credentials are shared, such as deployment systems.
 
@@ -14,7 +14,7 @@ Registry service accounts provide named tokens that can be used in environments 
 . Click btn:[Create account].
 . Find the created account in the list. 
 The list of accounts is long so you might have to click btn:[Next] multiple times before finding the account you created. 
-Alternatively, if you know the name of your token, you can go directly to the page by entering the URL https://access.redhat.com/terms-based-registry/token/<name-of-your-token>
+Alternatively, if you know the name of your token, you can go directly to the page by entering the URL \https://access.redhat.com/terms-based-registry/token/<name-of-your-token>
 . Click the name of the account that you created. 
 . A token page opens, displaying a generated Username (different to the account name) and a token. 
 If no Username and token are displayed, click btn:[Regenerate token]. You can also click this to generate a new Username and token.
