--- a/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-credential-types.adoc
@@ -143,7 +143,7 @@ The following is an example of referencing many files in a custom credential tem
 
 . Click btn:[Create credential type].
 +
-Your newly created credential type is displayed on the list of credential types:
+Your newly created credential type is displayed in the list of credential types:
 
 +
 image:credential-types-new-listed.png[New credential type]
@@ -160,9 +160,9 @@ If the *Delete* option is disabled, this means that the credential type is being
 .Verification
 
 * Verify that the newly created credential type can be selected from the *Credential Type* selection window when creating a new credential:
-
-//[JMS] Replace this image with up to date one, maybe?
++
 image:credential-types-new-listed-verify.png[Verify new credential type]
+//[JMS] Replace this image with up to date one, maybe?
 
 .Additional resources
 
