--- a/downstream/titles/hub/install/master.adoc
+++ b/downstream/titles/hub/install/master.adoc
@@ -4,7 +4,7 @@
 :experimental:
 include::attributes/attributes.adoc[]
 
-= Installing and upgrading {PrivateHubName}
+= Installing and upgrading private automation hub
 
 You can install Private Automation Hub or upgrade to a new version on a {RHEL} (RHEL) 8.4 or later, or RHEL 9 or later virtual or physical machine with a valid {PlatformName} subscription.
 
