--- a/downstream/titles/hub/manage-containers/master.adoc
+++ b/downstream/titles/hub/manage-containers/master.adoc
@@ -6,7 +6,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Managing containers in {PrivateHubName}
+= Managing containers in private automation hub
 
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
