--- a/downstream/titles/worker-install/master.adoc
+++ b/downstream/titles/worker-install/master.adoc
@@ -8,7 +8,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= Installing the {CatalogName} worker
+= Installing the automation services catalog worker
 
 You can extend {PlatformName} to connect to {CatalogName} on cloud.redhat.com by using the {PlatformNameShort} setup or setup bundle installer.
 
