--- a/downstream/titles/dev-guide/master.adoc
+++ b/downstream/titles/dev-guide/master.adoc
@@ -7,7 +7,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= {PlatformName} Creator Guide
+= Red Hat Ansible Automation Platform Creator Guide
 
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
