--- a/downstream/titles/hub/getting-started/master.adoc
+++ b/downstream/titles/hub/getting-started/master.adoc
@@ -8,7 +8,7 @@
 include::attributes/attributes.adoc[]
 
 // Book Title
-= Getting started with {HubName}
+= Getting started with automation hub
 
 Red Hat Ansible {HubName} provides a place for Red Hat subscribers to quickly find and use content that is supported by Red Hat and our technology partners to deliver additional reassurance for the most demanding environments.
 
