--- a/downstream/titles/upgrade/master.adoc
+++ b/downstream/titles/upgrade/master.adoc
@@ -7,7 +7,7 @@ include::attributes/attributes.adoc[]
 
 
 // Book Title
-= {PlatformName} Upgrade and Migration Guide
+= Red Hat Ansible Automation Platform Upgrade and Migration Guide
 
 include::aap-common/making-open-source-more-inclusive.adoc[leveloffset=+1]
 
