Use attributes to reference Navigator Title and URL (#1894)
* Use attributes to reference Navigator Title and URL

* fix

--- a/downstream/modules/devtools/proc-devtools-testing-playbook.adoc
+++ b/downstream/modules/devtools/proc-devtools-testing-playbook.adoc
@@ -26,6 +26,6 @@ The output is displayed in the terminal.
 You can inspect the results and step into each play and task that was executed.
 
 For more information about running playbooks, refer to 
-link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/automation_content_navigator_creator_guide/assembly-execute-playbooks-navigator_ansible-navigator[Running Ansible playbooks with automation content navigator]
-in the _Automation content navigator creator guide_.
+link:{URLNavigatorGuide}/assembly-execute-playbooks-navigator_ansible-navigator[Running Ansible playbooks with automation content navigator]
+in the _{TitleNavigatorGuide}_ guide.
 
