AAP-30807 Commented out, and updated text for the 2.5 release.
Commented out several sections due to obsolescence. Made edits
to update version numbers, context, system requirements, etc.

These changes were made due to the new installation methods which
simplify both installation in a connected, and disconnected
network.

Partially resolves: AAP-30807

--- a/downstream/modules/platform/proc-creating-a-new-web-server-to-host-repositories.adoc
+++ b/downstream/modules/platform/proc-creating-a-new-web-server-to-host-repositories.adoc
@@ -57,7 +57,7 @@ $ sudo firewall-cmd --zone=public --add-service=http –add-service=https --perm
 $ sudo firewall-cmd --reload
 ----
 
-. On {ControllerName} and {HubName}, add a repo file at __/etc/yum.repos.d/local.repo__, and add the optional repos if needed:
+. On automation services, add a repo file at __/etc/yum.repos.d/local.repo__, and add the optional repos if needed:
 +
 ----
 [Local-BaseOS]
