--- a/downstream/assemblies/platform/assembly-disconnected-installation.adoc
+++ b/downstream/assemblies/platform/assembly-disconnected-installation.adoc
@@ -13,7 +13,7 @@ If you are not connected to the internet or do not have access to online reposit
 
 Before installing {PlatformNameShort} on a disconnected network, you must meet the following prerequisites:
 
-. A created subscription manifest. See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_operations_guide/assembly-aap-obtain-manifest-files#doc-wrapper[Obtaining a manifest file] for more information.
+. A subscription manifest that you can upload to the platform. See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_operations_guide/assembly-aap-obtain-manifest-files#doc-wrapper[Obtaining a manifest file] for more information.
 
 . The {PlatformNameShort} setup bundle at link:{PlatformDownloadUrl}[Customer Portal] is downloaded.
 
@@ -28,27 +28,36 @@ include::platform/proc-creating-a-new-web-server-to-host-repositories.adoc[level
 
 include::platform/proc-accessing-rpm-repositories-for-locally-mounted-dvd.adoc[leveloffset=+1]
 
-include::platform/proc-adding-a-subscription-manifest-to-aap-without-an-internet-connection.adoc[leveloffset=+1]
+//include::platform/proc-adding-a-subscription-manifest-to-aap-without-an-internet-connection.adoc[leveloffset=+1]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
 include::platform/proc-installing-the-aap-setup-bundle.adoc[leveloffset=+1]
 
 include::platform/proc-completing-post-installation-tasks.adoc[leveloffset=+1]
 
-include::platform/proc-importing-collections-into-private-automation-hub.adoc[leveloffset=+1]
+//include::platform/proc-importing-collections-into-private-automation-hub.adoc[leveloffset=+1]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
-include::platform/proc-creating-collection-namespace.adoc[leveloffset=+1]
+//include::platform/proc-creating-collection-namespace.adoc[leveloffset=+1]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
-include::platform/proc-approving-the-imported-collection.adoc[leveloffset=+1]
+//include::platform/proc-approving-the-imported-collection.adoc[leveloffset=+1]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
-include::platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc[leveloffset=+1]
+//include::platform/con-building-an-execution-environment-in-a-disconnected-environment.adoc[leveloffset=+1]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
-include::platform/proc-installing-the-ansible-builder-rpm.adoc[leveloffset=+2]
+//include::platform/proc-installing-the-ansible-builder-rpm.adoc[leveloffset=+2]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
-include::platform/proc-creating-the-custom-execution-environment-definition.adoc[leveloffset=+2]
+//include::platform/proc-creating-the-custom-execution-environment-definition.adoc[leveloffset=+2]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
-include::platform/proc-building-the-custom-execution-environment.adoc[leveloffset=+2]
+//include::platform/proc-building-the-custom-execution-environment.adoc[leveloffset=+2]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
-include::platform/proc-uploading-the-custom-execution-environment-to-the-private-hub.adoc[leveloffset=+2]
+//include::platform/proc-uploading-the-custom-execution-environment-to-the-private-hub.adoc[leveloffset=+2]
+//removed for 2.5 changes AAP-30807 made by rjgrange
 
 // Removing references to upgrades for 2.5-ea - AAP-17771
 // include::platform/proc-upgrading-between-minor-aap-releases.adoc[leveloffset=+1]
