--- a/downstream/modules/platform/proc-installing-the-aap-setup-bundle.adoc
+++ b/downstream/modules/platform/proc-installing-the-aap-setup-bundle.adoc
@@ -25,5 +25,5 @@ $ cd ansible-automation-platform-setup-bundle-2.5-1
 
 [NOTE]
 ====
-See section link:https://docs.google.com/document/d/1fIrlSrj8bSSWBVptXWmm0ZFixhZ4mM5pW2CQx_3Oh7A/edit#heading=h.tevmra11zce4[3.2 Inventory file examples base on installation scenarios] for a list of examples that best fits your scenario.
+See section xref:con-install-scenario-examples[3.2 Inventory file examples base on installation scenarios] for a list of examples that best fits your scenario.
 ====
