--- a/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
+++ b/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
@@ -14,6 +14,6 @@ Now that you have successfully installed Ansible Automation Platform, to begin u
 
 link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/getting_started/with/Ansible_automation_platform[{TitleGettingStarted}]
 
-link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/managing_content_in_automation_hub/index[Managing content in automation hub]
+link:{LinkHubManagingContent}[Managing content in automation hub]
 
 link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/creating_and_consuming_execution_environments/index[Creating and consuming execution environments]
