--- a/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
+++ b/downstream/modules/platform/proc-completing-post-installation-tasks.adoc
@@ -16,4 +16,4 @@ link:{URLGettingStarted}[{TitleGettingStarted}]
 
 link:{LinkHubManagingContent}
 
-link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.5/html/creating_and_consuming_execution_environments/index[Creating and consuming execution environments]
+link:{LinkBuilder}
